--- a/about.html
+++ b/about.html
@@ -99,9 +99,11 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-12">
                         <div class="slider_text text-center about_slide">
-                            <h3>Hi there, I am Jony <br>
+                            <h3>Hi, I am MrTNS 
+                                <br>
                                     Creative director based  <br>
-                                    on New York</h3>
+                                    on New York
+                            </h3>
                         <a class="boxed-btn3-line" href="#">View Works</a>
                         </div>
                     </div>
